retrieveUnpackaged/objects/Activity_Data__c.object
<CustomObject>
    <description>This object contains the activity information.</description>
    <fields>
        <fullName>Amount_of_Compensation__c</fullName>
        <label>Amount of Compensation:</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I have read, and am familiar with, the rules of the road.</description>
        <inlineHelpText>Check box to indicate you agree with the rules of the road.</inlineHelpText>
        <label>Employee Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration__c</fullName>
        <description>Date approval for activities ends.</description>
        <label>Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nature__c</fullName>
        <description>Describe the nature of the outside activity/employment including tasks to be performed.</description>
        <inlineHelpText>Describe the nature of the outside activity/employment including tasks to be performed.</inlineHelpText>
        <label>Nature of the outside activity:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <description>Date current status was established.</description>
        <label>Status Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Concurred</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date application was entered.</description>
        <label>Submitted</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Activity Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Applications</fullName>
        <columns>Applicant_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Expiration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Applications</label>
    </listViews>
    <nameField>
        <displayFormat>Std-{0}</displayFormat>
        <label>Activity Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>